made other tabs clickable and fixes broken UI issues in code review

--- a/requests/style.css
+++ b/requests/style.css
@@ -434,6 +434,8 @@ nav a:hover {
   transform: translateY(-50%);
   transition: transform 0.3s ease;
   font-size: 1.5rem;
+  cursor: pointer;
+  pointer-events: none;
 }
 
 .rotate__up {
